# pastapull

./: .gitignore  LICENSE  README.md  main.py  notebook.ipynb  pyproject.toml  utils.py
src/: main.py
src/db/: crud.py  database.py  models.py  schemas.py
src/utils/: utils.py
tests/utils/: test_utils.py
